--- a/src/main/java/com/heavyweightsoftware/rookery/CollectData.form
+++ b/src/main/java/com/heavyweightsoftware/rookery/CollectData.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.heavyweightsoftware.rookery.CollectData">
-  <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="13" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+  <grid id="27dc6" binding="panelMain" layout-manager="GridLayoutManager" row-count="13" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+    <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="424"/>
+      <xy x="20" y="20" width="500" height="444"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -170,11 +170,14 @@
               <text value="Save"/>
             </properties>
           </component>
-          <hspacer id="d0a2d">
+          <component id="ee3f0" class="javax.swing.JButton" binding="buttonLoad">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
-          </hspacer>
+            <properties>
+              <text value="Load"/>
+            </properties>
+          </component>
         </children>
       </grid>
       <component id="30f2c" class="javax.swing.JLabel" binding="lblTextColorDemo">
@@ -211,7 +214,7 @@
           <text value="Delay"/>
         </properties>
       </component>
-      <component id="651af" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
+      <component id="651af" class="javax.swing.JComboBox" binding="comboAnimation">
         <constraints>
           <grid row="10" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
