--- a/src/main/java/com/heavyweightsoftware/rookery/CollectData.form
+++ b/src/main/java/com/heavyweightsoftware/rookery/CollectData.form
@@ -220,13 +220,15 @@
         </constraints>
         <properties/>
       </component>
-      <component id="63db3" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+      <component id="63db3" class="javax.swing.JTextField" binding="textDelay">
         <constraints>
           <grid row="11" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <text value="0"/>
+        </properties>
       </component>
     </children>
   </grid>
