--- a/src/main/java/com/heavyweightsoftware/rookery/CollectData.form
+++ b/src/main/java/com/heavyweightsoftware/rookery/CollectData.form
@@ -34,11 +34,13 @@
       </component>
       <component id="839f2" class="javax.swing.JTextArea" binding="textAreaText">
         <constraints>
-          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="50"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <lineWrap value="true"/>
+        </properties>
       </component>
       <component id="3b7c4" class="javax.swing.JLabel" binding="lblTitleFont">
         <constraints>
@@ -227,7 +229,7 @@
           </grid>
         </constraints>
         <properties>
-          <text value="100"/>
+          <text value="200"/>
         </properties>
       </component>
     </children>
